--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ main i {
 
 @media (max-width: 676px) {
   .main {
-    width: 300px;
+    width: 500px;
     height: 400px;
   }
 
@@ -113,6 +113,44 @@ main i {
   }
 
   .comand {
+    grid-template-columns: 500px;
+  }
+}
+
+@media (max-width: 592px) {
+  .main {
+    width: 300px;
+    height: 500px;
+  }
+
+  .main h1 {
+    font-size: 42px;
+  }
+
+  .main p {
+    font-size: 20px;
+  }
+
+  .comand {
     grid-template-columns: 300px;
+  }
+}
+
+@media (max-width: 375px) {
+  .main {
+    width: 280px;
+    height: 500px;
+  }
+
+  .main h1 {
+    font-size: 42px;
+  }
+
+  .main p {
+    font-size: 20px;
+  }
+
+  .comand {
+    grid-template-columns: 280px;
   }
 }
